# maze

./: .gitignore  Cargo.toml  LICENSE.md  README.md  template.txt
maze-cli/: Cargo.toml
maze-cli/src/: main.rs
maze-lib/: Cargo.toml
maze-lib/src/: lib.rs  render.rs  unicode.rs
maze-wasm/: Cargo.toml  README.md  index.html
maze-wasm/src/: lib.rs
src/: main.rs  maze.rs  output.rs  render.rs
