[package]
name = "maze-wasm"
version = "0.1.0"
authors = ["Thomas Feldmann <mail@tfeldmann.de>"]
description = "A WASM maze generator."
license = "MIT"
edition = "2021"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
maze-lib = { path = "../maze-lib" }
getrandom = { version = "0.2.10", features = ["js"] }
wasm-bindgen = "0.2.86"
